# social_network

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start-api.sh
app/: configs.py  conftest.py  db.py  dependencies.py  messages.py  server.py  test_example.py
app/authentication/: middleware.py  models.py  routes.py  schema.py  services.py
app/authentication/tests/: test_routes.py
app/base/: middlewares.py  models.py  permissions.py  repositories.py
app/base/tests/: test_permissions.py  test_repositories.py
app/configs/: database.py  environment.py
app/decode_task/: decode_task.py
app/middlewares/: authentication.py
app/mixins/: __init__.py
app/models/: __init__.py  assosiate_models.py  base_model.py  post_model.py  user_model.py
app/posts/: models.py  routes.py  schema.py  services.py
app/repositories/: base_repository.py  like_repository.py  post_repository.py  user_repository.py
app/routes/v2/: authentication.py  post_routes.py
app/schemas/: auth_schema.py  base_schema.py  post_schema.py
app/services/: auth_services.py  like_service.py  post_service.py  user_service.py
app/tests/: conftest.py  test_routes.py
app/tests/integrations/: test_routes.py
app/tests/unittests/: test_permissions.py  test_repositories.py
migrations/: env.py
migrations/versions/: 4c0b50da81fc_create_post_models.py  5fc6ee199ee2_create_user_models.py  d76993198d1f_create_refresh_token.py
