[tool.poetry]
name = "webtronics"
version = "0.1.0"
description = ""
authors = ["miko <islamimanhod@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.89.0"
SQLAlchemy = "^1.4.46"
alembic = "^1.9.1"
asyncpg = "^0.27.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
bcrypt = "^4.0.1"
passlib = "^1.7.4"
pydantic = {extras = ["dotenv"], version = "^1.10.4"}
fastapi-pagination = "^0.11.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.21.0"
psycopg2-binary = "^2.9.5"
types-PyYAML = "^6.0.12"
pytest = "^7"
pytest-docker = "^1.0.1"
httpx = "^0.23.1"
factory-boy = "^3.2.1"
pytest-asyncio = "^0.20.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
